vnic: Relax PHY node matching after r336281.

The phy name may apparently be followed by a number in some systems.
Allow that.

PR:		242654
Reported and tested by:	Marcel <marcel@brickporch.com>
MFC after:	3 days
Sponsored by:	The FreeBSD Foundation